--- a/client/baseLayout.html
+++ b/client/baseLayout.html
@@ -1,4 +1,6 @@
 <template name="baseLayout">
-  {{> loginButtons}}
-  {{> yield}}
+  <div class="container text-center">
+    {{> loginButtons}}
+    {{> yield}}
+  </div>
 </template>
