signin form looking good and ids for templates

--- a/client/baseLayout.html
+++ b/client/baseLayout.html
@@ -1,6 +1,5 @@
 <template name="baseLayout">
-  <div class="container text-center">
-    {{> loginButtons}}
+  <div id="baseLayout" class="container text-center">
     {{> yield}}
   </div>
 </template>
